--- a/smart_road/Cargo.toml
+++ b/smart_road/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-gtk = "0.18.1"
-gio = "0.20.1"
+sdl2 = { version = "0.35", features = ["image"] }
+
 
