--- a/smart_road/Dockerfile
+++ b/smart_road/Dockerfile
@@ -1,38 +1,70 @@
-# Étape 1 : Construction
-FROM rust:latest as builder
+# Étape 1 : Construction de l'application
+# FROM rust:latest AS builder
+FROM rust:1.67-buster AS builder
 
-# Créer un répertoire de travail
-WORKDIR /usr/src/myapp
+# Définir le répertoire de travail
+WORKDIR /usr/src/smart_road
 
-# Copier les fichiers Cargo.toml et Cargo.lock (si présents) pour la construction des dépendances
+# Copier les fichiers de configuration
 COPY Cargo.toml Cargo.lock ./
-
-# Créer un fichier pour les dépendances
 RUN mkdir src && echo 'fn main() {}' > src/main.rs
 
-# Installer les dépendances
+# Construire les dépendances du projet
 RUN cargo build --release
 
-# Copier le code source du projet
+# Copier le reste du code source
 COPY . .
 
-# Construire l'application en mode release
+# Construire le projet
 RUN cargo build --release
 
 # Étape 2 : Création de l'image finale
-FROM alpine:latest
+# FROM debian:bullseye-slim
+FROM debian:latest
 
 # Installer les bibliothèques nécessaires
-RUN apk add --no-cache libssl1.1
+RUN apt-get update && \
+    apt-get install -y \
+    build-essential \
+    libssl-dev \
+    libsdl2-dev \
+    libsdl2-image-dev \
+    libsdl2-ttf-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Créer un répertoire de travail
-WORKDIR /usr/local/bin
+# Copier l'application construite depuis l'étape précédente
+COPY --from=builder /usr/src/smart_road/target/release/smart_road /usr/local/bin/smart_road_image
 
-# Copier l'exécutable depuis l'image de construction
-COPY --from=builder /usr/src/myapp/target/release/myapp ./smart_road
+# Définir la commande par défaut
+CMD ["smart_road"]
 
-# Définir le point d'entrée du conteneur
-ENTRYPOINT ["./smart_road"]
 
 # Exposer le port si nécessaire (par exemple pour une application serveur)
 # EXPOSE 8080
+
+
+# PROCÉDURE DE DÉMARRAGE:
+
+# créer l'image docker à partir du terminal: 
+# - sudo docker build -t smart_road_image .
+
+# créer l'image docker à partir du terminal:
+# - docker container run --detach --name smart_road 
+
+# Arrêt du docker: 
+# - Docker stop smart_road
+
+# Démarrage du docker:
+# - Docker start smart_road
+
+# Effacé le docker:
+# - Docker rm smart_road
+
+# Effacer l’image:
+# - Docker rmi smart_road
+
+# liste des images forum:
+# - docker images smart_road_image
+
+# liste des conteneurs:
+# - docker ps -a
